--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-WORDPRESS_URL="https://wordpress.com"
-WORDPRESS_HOSTNAME="wordpress.com"
+WORDPRESS_URL="https://bercostudio.wordpress.com/"
+WORDPRESS_HOSTNAME="bercostudio.wordpress.com"
